# Lovejoys-Antique-Evaluation

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  app.json  dev.env  manage.py  package-lock.json  package.json  prod.env  pyproject.toml  tailwind.config.js
.github/workflows/: python-test.yml
accounts/: admin.py  forms.py  models.py  tokens.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_otp.py
accounts/templates/accounts/: cookie_error.html  login.html  otp.html  otp_email.html  signup.html  success_signup.html  validate.html  validate_email.html
accounts/templates/registration/: login.html
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_rename_comment_evaluationrequest_item_description.py  0003_alter_evaluationrequest_item_description.py  0004_evaluationrequest_image.py
app/templates/app/: admin_view_requests.html  index.html  request_evaluation.html
app/tests/: test_server_starts.py
global_templates/: base.html
lae/: asgi.py  password_validators.py  settings.py  urls.py  wsgi.py
tailwind/misc/: login-form.html  request_evaluation_form.html  signup-form.html
templates/: base.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
