[tool.poetry]
name = "lovejoy-antique-evaluation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
django = "3.2.10"
django-environ = "^0.8.1"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-storages = "^1.12.3"
psycopg2 = "^2.9.2"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
