[tool.poetry]
name = "lovejoy-antique-evaluation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
django = "4.0"
django-environ = "^0.8.1"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-storages = "^1.12.3"
psycopg2 = "^2.9.2"
whitenoise = "^5.3.0"
sentry-sdk = "^1.5.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^6.0.0"}
crispy-tailwind = "^0.5.0"
django-crispy-forms = "^1.13.0"
Pillow = "^8.4.0"
boto3 = "^1.20.24"
django-csp = "^3.7"
requests = "^2.26.0"
django-ratelimit = "^3.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = "^21.12b0"
selenium = "^4.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
